// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Dd checkGrammar=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkGrammar=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkHighlight=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkHighlight=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkSpaces=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd checkSpaces=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd className="my-classname" 1`] = `
<dd
  className="uu5-bricks-dd my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd content="This is Content from ContentMixin" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</dd>
`;

exports[`UU5.Bricks.Dd content=12345 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</dd>
`;

exports[`UU5.Bricks.Dd controlled=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd controlled=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd default props 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd disabled=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd disabled=true 1`] = `
<dd
  className="uu5-bricks-dd uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</dd>
`;

exports[`UU5.Bricks.Dd dynamic=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd dynamic=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd hidden=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd hidden=true 1`] = `
<dd
  className="uu5-bricks-dd uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd id="myId" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd ignoreHTML=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd ignoreHTML=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd is inner bricks.dt Bricks.Dt is root to: UU5.Bricks.Dd 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Dt
    content="Dwarf"
    id="uuID02"
    key="uuID02"
  />
  <Dd
    content="The small man with funny hat"
    id="uuID03"
    key="uuID03"
  />
  <Dt
    content="Red Dwarf"
    id="uuID04"
    key="uuID04"
  />
  <Dd
    content="Small star, or large space ship from british sitcom."
    id="uuID05"
    key="uuID05"
  />
</dl>
`;

exports[`UU5.Bricks.Dd mainAttrs=undefined 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd name="myName" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd noIndex=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd noIndex=true 1`] = `
<dd
  className="uu5-bricks-dd uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd selected=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd selected=true 1`] = `
<dd
  className="uu5-bricks-dd uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd style="padding:8px; borderRadius: 2px" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dd style={"backgroundColor":"red","color":"blue"} 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dd textCorrector=false 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd textCorrector=true 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dd tooltip="My Tooltip" 1`] = `
<dd
  className="uu5-bricks-dd"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
